--- a/Giao diện/Priority.html
+++ b/Giao diện/Priority.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Priority</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="bg">
@@ -77,5 +77,8 @@
     <h5 class="left">Thời gian chờ đợi trung bình = </h5>
 
 </body>
+
+<script src="../js/jquery.js"></script>
+<script src="../js/main.js"></script>
 
 </html>
