--- a/Giao diện/SJF_uu_tien.html
+++ b/Giao diện/SJF_uu_tien.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SFJ Ưu Tiên</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
@@ -37,6 +37,7 @@
                                     <div class="col">
                                         <input type="number">
                                     </div>
+                                </div>
                             </form>
                         </td>
                         <td>
@@ -77,5 +78,8 @@
     </center>
     <h5 class="left">Thời gian chờ đợi trung bình = </h5>
 </body>
+
+<script src="../js/jquery.js"></script>
+<script src="../js/main.js"></script>
 
 </html>
