--- a/Giao diện/SJF_khong_uu_tien.html
+++ b/Giao diện/SJF_khong_uu_tien.html
@@ -43,7 +43,7 @@
             <ul class="left">
             </ul>
         </div>
-        <h5 class="left wait_avg">Thời gian chờ đợi trung bình = </h5>
+        <h5 class="left wait_avg"></h5>
     </div>
 
 
