Hoàn thành sjf ưu tiên

--- a/code/SJF_uu_tien.html
+++ b/code/SJF_uu_tien.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SFJ Ưu Tiên</title>
+    <title>SJF Không Ưu Tiên</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-
 </head>
 
 <body class="bg">
@@ -15,71 +14,45 @@
         <div class="alert alert-secondary" role="alert">
             <h1><b>NGUYÊN LÝ HỆ ĐIỀU HÀNH</b></h1>
         </div>
+        <div>
+            <h4>Giải thuật SJF Ưu Tiên</h4>
+        </div>
         <h5>Số tiến trình phải thực hiện là:</h5>
-        <input type="number">
-        <button type="button" class="btn btn-success">Submit</button>
+        <div>
+            <form action="">
+                <input type="number" id="process" value="" min="2">
+                <button type="button" class="btn btn-success process_sbm">Subtmit</button>
+            </form>
+        </div>
 
-        <div style="width: 50%" class="sz">
+        <div style="width: 50%; display: none;" class="sz">
             <table class="table table-bordered table-dark">
                 <thead>
-                    <tr class="a">
-                        <th scope="col">Process</th>
-                        <th scope="col">Arival Time</th>
-                        <th scope="col">Burst Time</th>
+                    <tr>
+                        <th scope="col" style="text-align: center;">Process</th>
+                        <th scope="col" style="text-align: center;">Arival Time (s)</th>
+                        <th scope="col" style="text-align: center;">Burst Time (s)</th>
                     </tr>
                 </thead>
                 <tbody class="a">
-                    <tr>
-                        <th scope="row">P1</th>
-                        <td>
-                            <form>
-                                <div class="row">
-                                    <div class="col">
-                                        <input type="number">
-                                    </div>
-                                </div>
-                            </form>
-                        </td>
-                        <td>
-                            <form>
-                                <div class="row">
-                                    <div class="col">
-                                        <input type="number">
-                                    </div>
-                            </form>
-                        </td>
-
-                    </tr>
-                    <tr>
-                        <th scope="row">P2</th>
-                        <td>
-                            <form>
-                                <div class="row">
-                                    <div class="col">
-                                        <input type="number">
-                                    </div>
-                            </form>
-                        </td>
-                        <td>
-                            <form>
-                                <div class="row">
-                                    <div class="col">
-                                        <input type="number">
-                                    </div>
-                            </form>
-                        </td>
-                    </tr>
-
                 </tbody>
             </table>
-            <button type="button" class="btn btn-success">Submit</button>
-
-            </div>
+            <button type="submit" class="btn btn-success result-btn">Submit</button>
+        </div>
     </center>
-    <h5 class="left">Thời gian chờ đợi trung bình = </h5>
+    <div class="result" style="display: none;">
+        <div>
+            <h5 class="left ">Thời gian chờ đợi của các tiến trình: </h5>
+            <ul class="left">
+            </ul>
+        </div>
+        <h5 class="left wait_avg"></h5>
+    </div>
+
+
 </body>
 
 <script src="../js/jquery.js"></script>
-<script src="../js/main.js"></script>
+<script src="../js/sjf.js"></script>
 
 </html>
