--- a/code/index.html
+++ b/code/index.html
@@ -42,6 +42,7 @@
             </div>
 
             <a href="Priority.html"><button type="button" class="btn btn-success">Giải Thuật Priority</button></a>
+            <a href="FCFS.html"><button type="button" class="btn btn-success">Giải Thuật FCFS</button></a>
         </div>
 
 
